2005-05-19 Vladimir Hirsl
	Final fix for 95641: [Scanner Config] Per file scanner info not available for header files 
	and not compiled source files.
	For include files and source files that are not compiled per file discovered scanner info
	defaults to project's discovered scanner info.
	A new method is added to CoreModel to determine if per resource scanner info is empty.
	This method will take into account effective per file discovered scanner info.

	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtension.java
	
2005-05-17 Vladimir Hirsl
	Fixed problem marker updating for files that are not indexed due to
	empty scanner info. Some refactoring of problem marker generation code.
	
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AbstractIndexer.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexerRequestor.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexerRunner.java

2005-05-13 Vladimir Hirsl
	Files with empty scanner info are not indexed anymore.
	Info problem marker is created for each such file.
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* src/org/eclipse/cdt/internal/core/CCorePluginResources.properties
	
	Fix for resolving header file name for #include "..." preprocessor statements.
	(Should use both local and system include paths)
	* parser/org/eclipse/cdt/internal/core/parser/scanner2/BaseScanner.java

2005-05-12 Alain Magloire