@@ -88,7 +88,11 @@ public class CGenerateIndexVisitor extends CASTVisitor {
      * @throws DOMException
      */
     private void processName(IASTName name) throws DOMException {
-        IBinding binding = name.resolveBinding();
+        // Quick check to see if the name is in an already indexed external header file
+		if (IndexEncoderUtil.nodeInVisitedExternalHeader(name, indexer.getIndexer())) 
+			return;
+
+		IBinding binding = name.resolveBinding();
         // check for IProblemBinding
         if (binding instanceof IProblemBinding) {
             IProblemBinding problem = (IProblemBinding) binding;
@@ -99,6 +103,7 @@ public class CGenerateIndexVisitor extends CASTVisitor {
             }
             return;
         }
+
         // Get the location
         IASTFileLocation loc = IndexEncoderUtil.getFileLocation(name);
         if (loc != null) {
