@@ -15,7 +15,9 @@ import org.eclipse.cdt.core.dom.ast.IASTFileLocation;
 import org.eclipse.cdt.core.dom.ast.IASTNode;
 import org.eclipse.cdt.core.dom.ast.IASTNodeLocation;
 import org.eclipse.cdt.internal.core.index.cindexstorage.IndexedFileEntry;
+import org.eclipse.cdt.internal.core.index.sourceindexer.SourceIndexer;
 import org.eclipse.core.resources.IFile;
+import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
 
 public class IndexEncoderUtil {
@@ -82,5 +84,20 @@ public class IndexEncoderUtil {
         }
         return fileLoc;
     }
+
+	public static boolean nodeInExternalHeader(IASTNode node) {
+		String fileName = node.getContainingFilename();
+		return (CCorePlugin.getWorkspace().getRoot().getFileForLocation(new Path(fileName)) == null)
+				? true : false;
+	}
+
+	public static boolean nodeInVisitedExternalHeader(IASTNode node, SourceIndexer indexer) {
+		String fileName = node.getContainingFilename();
+		IPath filePath = new Path(fileName);
+		IPath projectPath = indexer.getProject().getFullPath();
+		
+		return (CCorePlugin.getWorkspace().getRoot().getFileForLocation(new Path(fileName)) == null) &&
+				indexer.haveEncounteredHeader(projectPath, filePath, false);
+	}
 
 }
